blockml/test/errors/01_yaml/e120/e120_one.view
view: e120_one
table: 1
description:     
- 6
fields:
- dimension: dim1
  sql: 111
